--- a/controller.SmartEatConfig/Timer.java.html
+++ b/controller.SmartEatConfig/Timer.java.html
@@ -105,7 +105,7 @@ public class Timer extends TimerTask {
 <span class="nc" id="L105">                String posti=listUpdateMensa.get(0);</span>
 <span class="nc" id="L106">                String apertura=listUpdateMensa.get(1);</span>
 <span class="nc" id="L107">                String chiusura=listUpdateMensa.get(2);</span>
-<span class="nc" id="L108">                dao.doUpdate(&quot;mensa1&quot;,Integer.parseInt(posti), Time.valueOf(apertura),Time.valueOf(chiusura));</span>
+<span class="nc" id="L108">                dao.doUpdate(&quot;SmartEat&quot;,Integer.parseInt(posti), Time.valueOf(apertura),Time.valueOf(chiusura));</span>
 <span class="nc" id="L109">                listUpdateMensa.clear();</span>
 <span class="nc" id="L110">            }</span>
         }
