--- a/controller.GestioneMensa/AdminMensaArea.java.html
+++ b/controller.GestioneMensa/AdminMensaArea.java.html
@@ -74,7 +74,7 @@ public class AdminMensaArea extends HttpServlet {
      */
     public ArrayList&lt;String&gt; adminMensa()
     {
-<span class="fc" id="L77">        return mensadao.doRetrieveMensaByKey(&quot;mensa1&quot;);</span>
+<span class="fc" id="L77">        return mensadao.doRetrieveMensaByKey(&quot;SmartEat&quot;);</span>
     }
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.7.202105040129</span></div></body></html>
